--- a/server/core.lc.conf
+++ b/server/core.lc.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-	ServerName core.lc
-	DocumentRoot /home/andi/Webprojects/core/webdocs
+	ServerName xqcore.lc
+	DocumentRoot /home/andi/Webprojects/xqcore/webdocs
 
-	<Directory /home/andi/Webprojects/core/webdocs>
+	<Directory /home/andi/Webprojects/xqcore/webdocs>
 		Order deny,allow
 		Allow from all
 	</Directory>
