--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "grunt": "~0.4.0",
     "grunt-contrib": "~0.4.0",
     "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0"
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-concat": "~0.1.2"
   },
   "scripts": {
     "test": "test"
