--- a/.jshintrc
+++ b/.jshintrc
@@ -74,7 +74,7 @@
 	 *   doSomething(); // We used only two spaces for indentation here
 	 * }
 	 */
-	"indent": 4,
+	//"indent": 4,
 
 	/**
 	 * This option prohibits the use of a variable before it was defined. JavaScript has function scope only and, in addition to
