--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "xqcore",
-  "version": "0.1.0",
-  "description": "MVP Javascript Framework",
+  "version": "0.3.6",
+  "description": "Model View Presenter Javascript Framework",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib": "~0.4.0",
+    "grunt-contrib": "~0.6.1",
     "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-concat": "~0.1.2"
+    "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-bump": "0.0.2"
   },
   "scripts": {
     "test": "test"
@@ -29,19 +32,18 @@
     {
       "name": "Andi Heinkelein",
       "email": "andi@noname-media.com",
-      "web": "http://www.noname-media.com" 
-    } 
+      "web": "http://www.noname-media.com"
+    }
   ],
   "license": "MIT",
   "jam": {
     "dependencies": {
-      "jquery": ">1.9.0",
-      "handlebars": "1.0.0-beta.6.jam.2"
+      "jquery": ">=1.9.0",
+      "handlebars": null
     },
     "main": "webdocs/js/xqcore.js",
-    "shim": {
-      "deps": ["jquery", "handlebars"],
-      "exports": "XQCore"
-    }
+    "include": [
+      "webdocs/js/xqcore.js"
+    ]
   }
 }
