--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "xqcore",
   "version": "0.4.3",
   "description": "Model View Presenter Javascript Framework",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-jshint": "~0.6.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib": "~0.6.1",
