--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "xqcore",
-  "version": "0.4.29",
+  "version": "0.5.1-0",
   "description": "Model View Presenter Javascript Framework",
   "dependencies": {
-    "grunt-contrib-jshint": "~0.6.3"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib": "~0.6.1",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-jshint": "~0.6.5",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-bump": "0.0.2"
+    "grunt-bump": "0.0.11",
+    "grunt-bumpup": "~0.4.2"
   },
   "scripts": {
     "test": "test"
