--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-bump": "0.0.11",
-    "grunt-bumpup": "~0.4.2"
+    "grunt-bumpup": "~0.4.2",
+    "commander": "~2.1.0",
+    "node.extend": "~1.0.8",
+    "mkdirp": "~0.3.5"
   },
   "scripts": {
     "test": "test"
