--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xqcore",
-  "version": "0.7.0-1",
+  "version": "0.7.0-19",
   "description": "Model View Presenter Javascript Framework",
   "dependencies": {},
   "devDependencies": {
@@ -15,7 +15,8 @@
     "grunt-bumpup": "~0.4.2",
     "commander": "~2.1.0",
     "node.extend": "~1.0.8",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "express": "~3.4.7"
   },
   "scripts": {
     "test": "test"
