--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xqcore",
-  "version": "0.7.2-10",
+  "version": "0.7.3-16",
   "description": "Model View Presenter Javascript Framework",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.2",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.5",
@@ -16,7 +16,8 @@
     "commander": "~2.1.0",
     "node.extend": "~1.0.8",
     "mkdirp": "~0.3.5",
-    "express": "~3.4.7"
+    "express": "~3.4.7",
+    "grunt-version": "~0.3.0"
   },
   "scripts": {
     "test": "test"
@@ -39,15 +40,5 @@
       "web": "http://www.noname-media.com"
     }
   ],
-  "license": "MIT",
-  "jam": {
-    "dependencies": {
-      "jquery": ">=1.9.0",
-      "handlebars": null
-    },
-    "main": "webdocs/js/xqcore.js",
-    "include": [
-      "webdocs/js/xqcore.js"
-    ]
-  }
+  "license": "MIT"
 }
