--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "xqcore",
   "version": "0.8.0-13",
   "description": "Model View Presenter Javascript Framework",
+  "main": "build/xqcore.js",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.2",
@@ -17,7 +18,7 @@
     "node.extend": "~1.0.8",
     "mkdirp": "^0.4.1",
     "express": "~3.4.7",
-    "grunt-version": "~0.3.0",
+    "grunt-version": "^0.3.0",
     "promptly": "^0.2.0",
     "handlebars": "^2.0.0-alpha.2"
   },
