Added xqcore less styles

--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "xqcore",
-  "version": "0.8.1-64",
+  "version": "0.8.1-65",
   "description": "Model View Presenter Javascript Framework",
   "main": "build/xqcore.js",
   "dependencies": {},
   "devDependencies": {
+    "commander": "^2.2.0",
+    "express": "~3.4.7",
     "grunt": "~0.4.2",
-    "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.5",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-copy": "~0.4.1",
     "grunt-bump": "0.0.11",
     "grunt-bumpup": "~0.4.2",
-    "commander": "^2.2.0",
-    "node.extend": "~1.0.8",
-    "mkdirp": "^0.4.1",
-    "express": "~3.4.7",
-    "grunt-version": "^0.3.0",
-    "promptly": "^0.2.0",
-    "handlebars": "^2.0.0-alpha.2",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.5",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-yuidoc": "~0.4.0",
+    "grunt-dox": "~0.5.0",
     "grunt-simple-dox": "0.0.2",
-    "grunt-dox": "~0.5.0"
+    "grunt-version": "^0.3.0",
+    "handlebars": "^2.0.0-alpha.2",
+    "mkdirp": "^0.4.1",
+    "node.extend": "~1.0.8",
+    "promptly": "^0.2.0"
   },
   "scripts": {
     "test": "test"
