--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xqcore",
-  "version": "0.9.0",
+  "version": "0.9.0-3",
   "description": "Model View Presenter Javascript Framework",
   "main": "build/xqcore.js",
   "dependencies": {},
