--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "xqcore",
-  "version": "0.11.1-305",
+  "version": "0.12.1-0",
   "description": "Model View Presenter Javascript Framework",
   "main": "xqcore.js",
   "dependencies": {},
   "devDependencies": {
-    "commander": "^2.2.0",
-    "express": "~3.4.7",
-    "grunt": "~0.4.2",
-    "grunt-bump": "0.0.11",
-    "grunt-bumpup": "~0.4.2",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.5",
-    "grunt-contrib-less": "^0.12.0",
-    "grunt-contrib-uglify": "~0.2.0",
+    "commander": "^2.9.0",
+    "express": "~4.13.3",
+    "grunt": "~0.4.5",
+    "grunt-available-tasks": "^0.6.1",
+    "grunt-bumpup": "^0.6.2",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "~0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-version": "^0.3.0",
-    "handlebars": "^2.0.0-alpha.2",
-    "mkdirp": "^0.4.1",
-    "node.extend": "~1.0.8",
-    "promptly": "^0.2.0"
+    "grunt-release": "^0.13.0",
+    "grunt-version": "^1.0.0",
+    "handlebars": "^4.0.4",
+    "mkdirp": "^0.5.1",
+    "node.extend": "~1.1.5",
+    "promptly": "^0.2.1"
   },
   "scripts": {
     "test": "test"
