--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xqcore",
   "version": "0.13.1-1",
   "description": "Model View Presenter Javascript Framework",
-  "main": "xqcore.js",
+  "main": "xqcore-init.js",
   "dependencies": {},
   "devDependencies": {
     "commander": "^2.9.0",
