--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "xqcore",
-  "version": "0.13.1-11",
+  "version": "0.13.1-13",
   "description": "Model View Presenter Javascript Framework",
   "main": "xqcore-init.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.14.0"
+  },
   "devDependencies": {
     "commander": "^2.9.0",
+    "expect.js": "^0.3.1",
     "grunt": "~0.4.5",
     "grunt-available-tasks": "^0.6.1",
     "grunt-bumpup": "^0.6.2",
@@ -18,9 +21,12 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-release": "^0.13.0",
     "grunt-version": "^1.0.0",
+    "logtopus": "^0.2.1",
     "mkdirp": "^0.5.1",
     "node.extend": "~1.1.5",
-    "promptly": "^0.2.1"
+    "promptly": "^0.2.1",
+    "sinon": "^1.17.4",
+    "sinon-expect": "^0.3.0"
   },
   "scripts": {
     "test": "test"
