--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-copy": "~0.8.2",
     "grunt-contrib-jshint": "~0.11.3",
     "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-uglify": "~0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-release": "^0.13.0",
