--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xqcore",
-  "version": "0.13.1-29",
+  "version": "0.13.1",
   "description": "Model View Presenter Javascript Framework",
   "main": "xqcore-init.js",
   "dependencies": {
